Agregados nuevos archivos y modificaciones

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="button">
         <button class="botones">
-            <a href="flower.html" style="color: #fff;">¡Presiona aquí parra ver tu regalo!</a>
+            <a href="flower.html" style="color: #fff;">¡Presiona aquí para ver tu regalo!</a>
         </button>
     </div>
 
